@@ -2,6 +2,9 @@ Revision history for Pandoc-Elements
 
 {{$NEXT}}
     - Improve pod2pandoc script
+    - Rename Pandoc::Filter::Usage::frompod to ::pod2usage
+    - Add example filter: section
+    - use new CPAN module Pandoc
 
 0.24  2016-10-06 14:17:31 CEST
     - Rewrite and rename pandoc-filters to multifilter
